--- a/wsgiadmin/templates/login_reg.html
+++ b/wsgiadmin/templates/login_reg.html
@@ -40,7 +40,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <th><label for="id_street">Uliče a č.p. *:</label>
+                            <th><label for="id_street">Ulice a č.p. *:</label>
                             </th>
                             <td>
                                 <input id="id_street" type="text" name="street" maxlength="250"/>
@@ -112,7 +112,7 @@
                         </tr>
                         <tr>
                             <th>
-                                <label for="id_password2">Password again *:</label>
+                                <label for="id_password2">Znovu *:</label>
                             </th>
                             <td>
                                 <input type="password" name="password2" id="id_password2"/>
