--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -33,15 +33,13 @@
                     </a></h1>
                     <p id="login">
                         <strong>
-                            {# #TODO nemelo by tu byt request.user.is_superuser? #}
-
-                            {% if u != superuser %}
-                                {{ u.first_name }} {{ u.last_name }}
+                            {% if not u.is_superuser %}
+                                {{ u.username }}
                                 <br />
                                 (<i>{% trans "switched" %}</i> - <a href="{% url wsgiadmin.users.views.switch_to_admin 1 %}">{% trans "back" %}</a>)
                                 <span id="uzivatel">({% trans "superuser" %})</span>
                             {% else %}
-                                {{ u.first_name }} {{ u.last_name }} {% if u.is_superuser %} <span id="uzivatel">({% trans "superuser" %})</span>{% endif %}
+                                {{ u.username }} {% if u.is_superuser %} <span id="uzivatel">({% trans "superuser" %})</span>{% endif %}
                             {% endif %}
                         </strong>
                         <span class="odhlasit"><a href="{% url django.contrib.auth.views.logout %}">{% trans "Logout" %}</a></span>
