--- a/wsgiadmin/templates/redirects.html
+++ b/wsgiadmin/templates/redirects.html
@@ -2,31 +2,40 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "Administration" %}  &gt; {% trans "Redirects (aliases)" %}
+    {% trans "Administration" %} &gt; {% trans "Redirects (aliases)" %}
 {% endblock %}
 
 {% block jsblock %}
-    function remove(what) {
-    var removed_id = "#removed_"+what;
-    $("#remove_"+what).hide();
-    $.get("{% url wsgiadmin.emails.views.removeRedirect 0 %}"+what, function (data){
-    document.location = '{% url wsgiadmin.emails.views.redirects %}';
+    {{ block.super }}
+
+    $(function() {
+        $("#objects_list .object_delete").click(function() {
+            var orly = confirm('{% trans "Are you sure?" %}');
+            el = $(this);
+            if (orly) {
+                var object_id = $(this).attr('rel');
+                $.ajax({
+                    url:"{% url alias_remove %}",
+                    type:"POST",
+                    data:{'object_id': object_id, 'csrfmiddlewaretoken':'{{ csrf_token }}' },
+                    dataType:"json",
+                    success:function(data) {
+                        if (data.result == 'OK') {
+                            el.parent().html(data.messages[1]);
+                        } else {
+                            alert(data.messages[1]);
+                        }
+                    }
+                });
+            }
+        });
     });
-    }
 {% endblock %}
 
 {% block content %}
-
-    <h2>{% trans "Email redirects" %}</h2>
-    <p>
-        <a href="{% url wsgiadmin.emails.views.addRedirect %}">
-            {% trans "Add new email redirect" %}
-        </a>
-    </p>
-
     <div id="message-box"></div>
 
-    <h3>{% trans "List of existing email redirects" %}</h3>
+    <h3>{% trans "List of e-mail aliases" %}</h3>
     <table>
         <thead>
         <tr>
@@ -35,9 +44,9 @@
             <th>{% trans "Actions" %}</th>
         </tr>
         </thead>
-        {% if redirects %}
-            <tbody>
-            {% for redirect in redirects.object_list %}
+        {% if object_list %}
+            <tbody id="objects_list">
+            {% for redirect in object_list %}
                 <tr>
                     <td>{{ redirect.alias }}@{{ redirect.domain.name }}</td>
                     <td>{{ redirect.email }}</td>
@@ -45,10 +54,11 @@
                         <a href="{% url wsgiadmin.emails.views.changeRedirect redirect.id %}">
                             <img src="{{ STATIC_URL }}icons/raster/gray_dark/pen_alt_stroke_16x16.png" alt="{% trans "Edit" %}"/>
                         </a>
-                        <a href="#" id="remove_{{redirect.id}}" onclick="if(confirm('{% trans "Really remove chosen redirect?" %}')) {remove('{{redirect.id}}');};" class="bold">
-                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}" />
+
+                        <a href="#" class="object_delete" title="{% trans "Delete" %}" rel="{{ redirect.id }}">
+                            <img src="{{ STATIC_URL }}icons/raster/gray_dark/trash_fill_16x16.png" alt="{% trans "Delete" %}"/>
                         </a>
-                        <span id=" removed_{{ redirect.id }}" class="info"></span>
+                        <span id="removed_{{ redirect.id }}" class="info"></span>
                     </td>
                 </tr>
             {% endfor %}
@@ -57,32 +67,15 @@
             <tr>
                 <td colspan="3">
                     <div class="pagination">
-                        {% if redirects.has_previous %}
-                            <a href="{% url wsgiadmin.emails.views.redirects 1 %}" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a>{% endif %}
-                        {% if redirects.has_previous %}
-                            <a href="{% url wsgiadmin.emails.views.redirects redirects.previous_page_number %}" title="{% trans "Previous page" %}">&laquo; {% trans "Previous" %}</a>{% endif %}
-
-                        {% for p in paginator.page_range %}
-                            {% if p == num_page %}
-                                <a href="{% url wsgiadmin.emails.views.redirects p %}" class="number current" title="{{ p }}">{{ p }}</a>
-                            {% else %}
-                                <a href="{% url wsgiadmin.emails.views.redirects p %}" class="number" title="{{ p }}">{{ p }}</a>
-                            {% endif %}
-                        {% endfor %}
-
-                        {% if redirects.has_next %}
-                            <a href="{% url wsgiadmin.emails.views.redirects redirects.next_page_number %}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a>{% endif %}
-                        {% if redirects.has_next %}
-                            <a href="{% url wsgiadmin.emails.views.redirects paginator.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>{% endif %}
+                        {% include "paginator.html" %}
                     </div>
-                    <div class="clear"></div>
                 </td>
             </tr>
             </tfoot>
         {% else %}
             <tbody>
             <tr>
-                <td colspan="3">{% trans "Žádné přesměrování nebylo ještě vytvořeno." %}
+                <td colspan="3">{% trans "No email alias exists yet." %}
                     <a href="{% url wsgiadmin.emails.views.addRedirect %}">
                         {% trans "Create new email redirect" %}
                     </a>.
