templates DRY-ing

--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -16,7 +16,32 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.8.9.custom.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
     <script type="text/javascript">
-        {% block jsblock %}{% endblock %}
+        {% block jsblock %}
+            var success_callback = function(data) {
+                if (data.result == 'OK') {
+                    el.parent().html(data.messages[1]);
+                } else {
+                    alert(data.messages[1]);
+                }
+            }
+
+            $(function() {
+                $("#objects_list .object_delete").click(function() {
+                    var orly = confirm('{% trans "Are you sure?" %}');
+                    el = $(this);
+                    if (orly) {
+                        var object_id = $(this).attr('rel');
+                        $.ajax({
+                            url: '{% if delete_url %}{{ delete_url }}{% else %}not-def{% endif %}',
+                            type: "POST",
+                            data: {'object_id':object_id, 'csrfmiddlewaretoken':'{{ csrf_token }}' },
+                            dataType: "json",
+                            success: success_callback
+                        });
+                    }
+                });
+            });
+        {% endblock %}
     </script>
 
     <title>{% trans "Administration" %} {{ site }}</title>
